<resources>
    <string name="app_name">Leitor QRCode</string>
    <string name="fullscreenMode">Colocar em modo fullscreen</string>
    <string name="onFlash">Ligar flash</string>
    <string name="lockReader">Travar leitura de barra de código</string>
    <string name="info">Informação</string>
    <string name="infoDesc">Bota a cara menó.</string>
    <string name="lastContentRead">Conteúdo da última leitura:</string>
    <string name="nothingRead">Nada lido ainda</string>
    <string name="qrcodeFormat">Tipo barra de código: </string>
    <string name="clearContentRead">Limpar área de conteúdo lido</string>
    <string name="openUrl">ABRIR URL</string>
    <string name="closeFullscreen">Sair de modo fullscreen</string>
    <string name="openEmail">ABRIR EMAIL</string>
    <string name="openCall">LIGAR</string>
    <string name="requestDescription">Vai precisar permitir o uso da câmera, beleza?</string>
    <string name="requestButtonOk">Permitir</string>
    <string name="requestButtonCancel">Cancelar</string>
    <string name="invalidCode">Código não reconhecido.</string>
</resources>
