<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/flScanner"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true">

            <me.dm7.barcodescanner.zxing.ZXingScannerView
                android:id="@+id/zXingScanner"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="top|end" />
        </FrameLayout>


        <LinearLayout
            android:id="@+id/llInfos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/flScanner"
            android:background="@color/backgroundLightGrey"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:contentDescription="@string/info"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_info_outline_black_18dp"
                android:tint="@color/colorIconGrey" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:text="@string/infoDesc"
                android:textColor="@color/colorIconGrey"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llInfos"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/lastContentRead" />

        <LinearLayout
            android:id="@+id/llContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvLabel"
            android:layout_alignParentBottom="true"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingTop="4dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tvContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_toStartOf="@+id/ibClear"
                    android:layout_toLeftOf="@+id/ibClear"
                    android:background="@drawable/text_view_content_border"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="@string/nothingRead" />

                <TextView
                    android:id="@+id/tvQRCodeType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvContent"
                    android:layout_alignStart="@+id/tvContent"
                    android:layout_alignLeft="@+id/tvContent"
                    android:text="@string/qrcodeFormat"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <ImageButton
                    android:id="@+id/ibClear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/tvContent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:background="@drawable/image_button_delete"
                    android:contentDescription="@string/clearContentRead"
                    android:onClick="clearContent"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_delete_black_24dp"
                    android:tint="@android:color/white" />
            </RelativeLayout>

            <Button
                android:id="@+id/btOpen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/openUrl"
                android:textColor="@android:color/white"
                android:visibility="gone" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>